jdk17 - getDeclaredConstructor().newInstance()